[metadata]
name = chevah-keycert
version = 3.0.6
maintainer = Adi Roiban
maintainer_email = adi.roiban@proatria.com
license = MIT
platforms = any
description = SSH Keys and SSL keys and certificates management.
long_description = file: README.rst
url = 'https://github.com/chevah/chevah-keycert'


[options]
install_requires =
    pyopenssl >= 0.13
    pyasn1 >= 0.1.7
    cryptography >= 3.2
    chevah-compat >= 0.70
    scandir >= 1.7
    constantly >= 15.1.0
packages = find:
package_dir = =src

[options.packages.find]
where = src


[options.extras_require]
; These are the deps required to develop.
; Try to pin them as much as possible.
dev =
    zope.interface
    future

    pocketlint ==1.4.4.c10
    pyflakes >= 1.5.0
    pycodestyle ==2.3.1

    nose
    mock
    bunch
    coverage==4.5.4
    codecov
    unidecode
    distro


[bdist_wheel]
universal = 1
